<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:padding="14dp"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="100dp"
            android:src="@drawable/ic_arrow_back"/>

        <ImageView
            android:id="@+id/login_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/login_page"
            android:contentDescription="@string/app_name"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_log_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_pic"
            android:hint="@string/user"
            app:boxStrokeColor="@color/icon"
            app:startIconDrawable="@drawable/icon_message"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/custom_input"
            app:startIconTint="#034001"
            app:endIconTint="#034001"
            android:textColorHint="#034001"
            app:hintTextColor="#034001"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#034001"
                android:textSize="18sp"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_log_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_log_Username"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/icon"
            app:startIconDrawable="@drawable/icon_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/custom_input"
            app:startIconTint="#034001"
            app:endIconCheckable="true"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/icon"
            android:textColorHint="#034001"
            app:hintTextColor="#034001">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#034001"
                android:inputType="textPassword"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>



        <RelativeLayout
            android:id="@+id/login_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/input_log_Password"
            android:layout_marginTop="10dp">


            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:text="@string/remember_me"
                android:buttonTint="@color/icon"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_centerVertical="true"/>


        </RelativeLayout>


        <Button
            android:id="@+id/button_Login"
            android:layout_width="360dp"
            android:layout_height="55dp"
            android:layout_below="@+id/login_relative"
            android:background="@drawable/bg_button"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/btn_login"
            android:onClick="btn_Login"
            android:textColor="@color/icon"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/button_Login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:text="@string/don_t_have"
                android:textStyle="bold"
                android:textColor="#ffff"/>

            <Button
                android:id="@+id/btn_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registered"
                android:textColor="@color/icon"
                android:padding="0dp"
                android:textAllCaps="false"
                android:layout_marginStart="240dp"
                android:background="?android:attr/selectableItemBackground"
                android:focusable="true"/>

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>