<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:padding="14dp"
    tools:context=".RegisterActivity">


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <ImageView
            android:id="@+id/back2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="100dp"
            android:src="@drawable/ic_arrow_back"/>


        <ImageView
        android:id="@+id/splash_plant2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/register_page"
        android:contentDescription="@string/app_name"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_plant2"
        android:hint="@string/name"
        app:startIconDrawable="@drawable/ic_edit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@drawable/custom_input"
        app:startIconTint="#034001"
        app:endIconTint="#034001"
        android:textColorHint="#034001"
        app:hintTextColor="#034001"
        app:boxStrokeColor="@color/icon"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#034001"
            android:textSize="18sp"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputName"
        android:layout_marginTop="7dp"
        android:hint="@string/user"
        app:startIconDrawable="@drawable/icon_message"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@drawable/custom_input"
        app:startIconTint="#034001"
        app:endIconTint="#034001"
        app:boxStrokeColor="@color/icon"
        android:textColorHint="#034001"
        app:hintTextColor="#034001"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#034001"
            android:textSize="18sp"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputUser"
        android:layout_marginTop="7dp"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/icon_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@drawable/custom_input"
        app:startIconTint="#034001"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/icon"
        app:boxStrokeColor="@color/icon"
        android:textColorHint="#034001"
        app:hintTextColor="#034001"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/toast"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textPassword"
            android:textColor="#034001"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:background="@drawable/bg_button"
        android:layout_below="@+id/inputPassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:onClick="btnReg"
        android:text="Register now"
        android:textColor="@color/icon"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/buttonReg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/Re_Already"
            android:textStyle="bold"
            android:textColor="#ffff"/>

        <Button
            android:id="@+id/login_now_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_reg"
            android:textColor="@color/icon"
            android:padding="0dp"
            android:textAllCaps="false"
            android:layout_marginStart="240dp"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"/>

    </RelativeLayout>

</RelativeLayout>
</ScrollView>